--- a/style.css
+++ b/style.css
@@ -67,6 +67,21 @@ button {
 .error {
     border: red 2px solid;
 } 
+@media all and (max-width: 340px){
+    .box0 {
+        display: flex;
+        flex-direction: column;
+    } 
+    .box1 {
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+    .footer {
+        font-size: 15px;
+        display: flex;
+        flex-direction: column;
+    }
+}
 @media all and (max-width: 500px) {
     .box0 {
         display: flex;
@@ -78,5 +93,7 @@ button {
     }
     .footer {
         font-size: 15px;
+        display: flex;
+        flex-direction: column;
     }
 }
